/* версия протобаф файла.*/
syntax = "proto3";
/* весь полученный из этого протобафа код добавляем в пакет service */
package opcorpora_service;
option go_package = "../pkg/proto";

message ModeRequest {
    string mode = 1;
}

message ModeResponse {
    string result = 1;
}

message FindWordRequest {
    string word = 1;
}

message WordProperty {
    string property = 1;
    string value = 2;
}

message WordRecord {
    string word = 1;
    string baseform = 2;
    repeated WordProperty word_properties = 3;
}

message FindWordResponse {
    string result = 1;
    optional string error = 3;
    optional string req_id = 4;
    repeated WordRecord word_records = 2;
}

message CheckRequest {
    string query = 1;
}

message CheckResponse {
    string result = 1;
}

message CheckFindRequest {
    string req_id = 1;
}

message CheckFindResponse {
    string result = 1;
    optional string error = 3;
    repeated WordRecord word_records = 2;
}

/* Statistic info
*/
message StatRequest {
    string mode = 1;
}

message StatResponse {
    string result = 1;
    optional string error = 2;
    string info = 3;
}

/* сервис OpService с методом FindWord*/
service OpCorporaService {
    rpc Mode(ModeRequest) returns (ModeResponse) {}
    rpc FindWord(FindWordRequest) returns (FindWordResponse) {}
    rpc Check(CheckRequest) returns (CheckResponse) {}
    rpc CheckFind(CheckFindRequest) returns (CheckFindResponse) {}
    rpc Stat(StatRequest) returns (StatResponse) {}
}
